@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: sasl.test,v 1.9 2006/10/09 21:41:41 andreas_kupries Exp $
+# RCS: @(#) $Id: sasl.test,v 1.10 2008/01/29 00:51:39 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 
@@ -240,6 +240,31 @@ test SASL-DIGESTMD5-4.2 "bug #1412021: ensure service used correctly" {
         string compare $r $R(response)
     } res] $res
 } [list 0 0]
+
+test SASL-DIGESTMD5-4.3 "check for support of charset parameter" {
+    list [catch {
+        set service xmpp
+        set ctx [SASL::new -mechanism DIGEST-MD5 -service $service \
+                     -callback [list SASLCallback 0]]
+        SASL::step $ctx "nonce=\"0123456789\",realm=\"tcllib.sourceforge.net\",charset=utf-8"
+        array set p [SASL::DigestParameters [SASL::response $ctx]]
+        SASL::cleanup $ctx
+        info exists p(charset)
+    } res] $res
+} [list 0 1]
+
+test SASL-DIGESTMD5-4.4 "check parsing of spaces in params" {
+    list [catch {
+        set service xmpp
+        set ctx [SASL::new -mechanism DIGEST-MD5 -service $service \
+                     -callback [list SASLCallback 0]]
+        SASL::step $ctx "nonce=\"0123456789\", realm=\"tcllib.sourceforge.net\", charset=utf-8"
+        set r {}
+        foreach {k v} [SASL::DigestParameters [SASL::response $ctx]] { lappend r $k }
+        SASL::cleanup $ctx
+        lsort $r
+    } res] $res
+} [list 0 {charset cnonce digest-uri nc nonce qop realm response username}]
 
 test SASL-OTP-5.0 {Check basic OTP (otp-md5) operation} {
     list [catch {
